--- a/RL_hands_on.ipynb
+++ b/RL_hands_on.ipynb
@@ -734,14 +734,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## The Cross-Entropy Method"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "1. sample $A_1,\\cdots,A_N$ from $p(A)$\n",
     "2. evaluate $J(A_1),\\cdots,J(A_N)$\n",
@@ -752,7 +756,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### cartpole"
@@ -930,7 +935,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### frozenlake naive"
@@ -1177,7 +1183,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### frozenlake tweaked"
@@ -1421,7 +1428,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### frozenlake nonslippery"
    ]
@@ -1434,6 +1444,7 @@
      "end_time": "2019-07-22T18:02:40.994093Z",
      "start_time": "2019-07-22T18:02:15.126264Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1599,7 +1610,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Theoretical background of the cross-entropy method"
@@ -1657,30 +1669,355 @@
     "ExecuteTime": {
      "end_time": "2019-07-21T15:38:17.504633Z",
      "start_time": "2019-07-21T15:38:17.501013Z"
-    }
+    },
+    "heading_collapsed": true
    },
    "source": [
     "## Tabular Learning and the Bellman Equation"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "the value of the state is:\n",
+    "$$\n",
+    "V(s)=\\mathbb{E}\\left[\\sum_{t=0}^\\infty \\gamma^t r_t  \\right]\n",
+    "$$\n",
+    "\n",
+    "Bellman equation:\n",
+    "$$\n",
+    "V_0(a)=\\mathbb{E}_{s\\sim S}[r_{s,a}+\\gamma V_s]\n",
+    "$$\n",
+    "\n",
+    "Bellman optimality equation\n",
+    "$$\n",
+    "V_0=\\max_{a\\in A}\\mathbb{E}_{s\\sim S}[r_{s,a}+\\gamma V_s]\n",
+    "$$\n",
+    "\n",
+    "the value of state: $V_s$, the value of action $Q_{s,a}$, the latter is more convenient in practice\n",
+    "$$\n",
+    "Q_{s,a}=\\mathbb{E}_{s'\\sim S}[r_{s,a}+\\gamma V_{s'}]\n",
+    "$$\n",
+    "relatation between Q and V \n",
+    "$$\n",
+    "V_s=\\max_{a\\in A}Q_{s,a}\n",
+    "$$\n",
+    "So, replace V with Q in the Q function, we have:\n",
+    "$$\n",
+    "Q_{s,a}=\\mathbb{E}_{s'\\sim S}[r_{s,a}+\\gamma \\max_{a'\\in A}Q_{s',a'}]\n",
+    "$$\n",
+    "or simply:\n",
+    "$$\n",
+    "Q_{s,a}=r_{s,a}+\\gamma \\max_{a'\\in A}Q_{s',a'}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "### frozenlake v-iteration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "for values of **states**:\n",
+    "1. Initialize values of all states $V(s)$ to some initial value (usually zero)\n",
+    "2. For every state $s$ in the MDPs, perform the Bellman update:\n",
+    "    $$\n",
+    "    V(s) \\leftarrow \\max_a \\left( r(s,a)+\\gamma \\mathbb{E}_{s'\\sim p(s'|s,a)}[V(s']\\right)\n",
+    "    $$\n",
+    "3. Repeat step2 for some large number of steps or until changes become too small"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "obvious limitations:\n",
+    "1. state space should be discrete and small\n",
+    "2. transition probability and rewards matrix are needed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "the calculation of the state action values\n",
+    "\n",
+    "```python\n",
+    "def calc_action_value(self, state, action):\n",
+    "```\n",
+    "\n",
+    "![](img/05_state_action_value.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-23T05:23:09.652330Z",
+     "start_time": "2019-07-23T05:23:09.507830Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best reward updated 0.000 -> 0.150\n",
+      "Best reward updated 0.150 -> 0.300\n",
+      "Best reward updated 0.300 -> 0.400\n",
+      "Best reward updated 0.400 -> 0.850\n",
+      "Solved in 15 iterations!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gym\n",
+    "import collections\n",
+    "from tensorboardX import SummaryWriter\n",
+    "\n",
+    "ENV_NAME = \"FrozenLake-v0\"\n",
+    "GAMMA = 0.9\n",
+    "TEST_EPISODES = 20\n",
+    "\n",
+    "\n",
+    "class Agent:\n",
+    "    def __init__(self):\n",
+    "        self.env = gym.make(ENV_NAME)\n",
+    "        self.state = self.env.reset()\n",
+    "        self.rewards = collections.defaultdict(float) #reward table: (source,action,target)->reward\n",
+    "        self.transits = collections.defaultdict(collections.Counter)#transition: (state,action)->{target:times}\n",
+    "        self.values = collections.defaultdict(float)#value table: (state)->value\n",
+    "\n",
+    "    def play_n_random_steps(self, count):\n",
+    "        for _ in range(count):\n",
+    "            action = self.env.action_space.sample() #random\n",
+    "            new_state, reward, is_done, _ = self.env.step(action)\n",
+    "            self.rewards[(self.state, action, new_state)] = reward # reward table\n",
+    "            self.transits[(self.state, action)][new_state] += 1 # transition table\n",
+    "            self.state = self.env.reset() if is_done else new_state\n",
+    "\n",
+    "    def calc_action_value(self, state, action): # Q(s,a)\n",
+    "        target_counts = self.transits[(state, action)]\n",
+    "        total = sum(target_counts.values())\n",
+    "        action_value = 0.0\n",
+    "        for tgt_state, count in target_counts.items():\n",
+    "            reward = self.rewards[(state, action, tgt_state)]\n",
+    "            action_value += (count / total) * (reward + GAMMA * self.values[tgt_state])\n",
+    "        return action_value\n",
+    "\n",
+    "    def select_action(self, state): #arg max_a Q(s,a)\n",
+    "        best_action, best_value = None, None\n",
+    "        for action in range(self.env.action_space.n):\n",
+    "            action_value = self.calc_action_value(state, action)\n",
+    "            if best_value is None or best_value < action_value:\n",
+    "                best_value = action_value\n",
+    "                best_action = action\n",
+    "        return best_action\n",
+    "\n",
+    "    def play_episode(self, env):\n",
+    "        total_reward = 0.0\n",
+    "        state = env.reset()\n",
+    "        while True:\n",
+    "            action = self.select_action(state) #greedy\n",
+    "            new_state, reward, is_done, _ = env.step(action)\n",
+    "            self.rewards[(state, action, new_state)] = reward #also update \n",
+    "            self.transits[(state, action)][new_state] += 1\n",
+    "            total_reward += reward\n",
+    "            if is_done:\n",
+    "                break\n",
+    "            state = new_state\n",
+    "        return total_reward\n",
+    "\n",
+    "    def value_iteration(self):\n",
+    "        for state in range(self.env.observation_space.n): #loop over all states\n",
+    "            state_values = [self.calc_action_value(state, action) # all possible action and values\n",
+    "                            for action in range(self.env.action_space.n)]\n",
+    "            self.values[state] = max(state_values) # the max\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    test_env = gym.make(ENV_NAME)\n",
+    "    agent = Agent()\n",
+    "    writer = SummaryWriter(comment=\"-v-iteration\")\n",
+    "\n",
+    "    iter_no = 0\n",
+    "    best_reward = 0.0\n",
+    "    while True:\n",
+    "        iter_no += 1\n",
+    "        agent.play_n_random_steps(100) # random plays, populating the reward and transition tables.\n",
+    "        agent.value_iteration() #update value table\n",
+    "\n",
+    "        reward = 0.0\n",
+    "        for _ in range(TEST_EPISODES): #test using the updated value table\n",
+    "            reward += agent.play_episode(test_env)\n",
+    "        reward /= TEST_EPISODES\n",
+    "        writer.add_scalar(\"reward\", reward, iter_no)\n",
+    "        if reward > best_reward:\n",
+    "            print(\"Best reward updated %.3f -> %.3f\" % (best_reward, reward))\n",
+    "            best_reward = reward\n",
+    "        if reward > 0.80:\n",
+    "            print(\"Solved in %d iterations!\" % iter_no)\n",
+    "            break\n",
+    "    writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "### frozenlake q-iteration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "for values of **actions**:\n",
+    "1. Initialize all $Q(s,a)$ to zero\n",
+    "2. For every state $s$ and every action $a$ in this state, perform update:\n",
+    "    $$\n",
+    "    Q(s,a)\\leftarrow r(s,a)+\\gamma\\mathbb{E}_{s'\\sim p(s'|s,a)} \\left[\\max_{a'}Q(s',a') \\right]\n",
+    "    $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-23T05:35:05.806548Z",
+     "start_time": "2019-07-23T05:35:05.680033Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best reward updated 0.000 -> 0.650\n",
+      "Best reward updated 0.650 -> 0.850\n",
+      "Solved in 18 iterations!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gym\n",
+    "import collections\n",
+    "from tensorboardX import SummaryWriter\n",
+    "\n",
+    "ENV_NAME = \"FrozenLake-v0\"\n",
+    "GAMMA = 0.9\n",
+    "TEST_EPISODES = 20\n",
+    "\n",
+    "\n",
+    "class Agent:\n",
+    "    def __init__(self):\n",
+    "        self.env = gym.make(ENV_NAME)\n",
+    "        self.state = self.env.reset()\n",
+    "        self.rewards = collections.defaultdict(float)\n",
+    "        self.transits = collections.defaultdict(collections.Counter)\n",
+    "        self.values = collections.defaultdict(float) #Q(s,a) instead of V(s)\n",
+    "\n",
+    "    def play_n_random_steps(self, count):\n",
+    "        for _ in range(count):\n",
+    "            action = self.env.action_space.sample()\n",
+    "            new_state, reward, is_done, _ = self.env.step(action)\n",
+    "            self.rewards[(self.state, action, new_state)] = reward\n",
+    "            self.transits[(self.state, action)][new_state] += 1\n",
+    "            self.state = self.env.reset() if is_done else new_state\n",
+    "\n",
+    "    def select_action(self, state):\n",
+    "        best_action, best_value = None, None\n",
+    "        for action in range(self.env.action_space.n):\n",
+    "            action_value = self.values[(state, action)]\n",
+    "            if best_value is None or best_value < action_value:\n",
+    "                best_value = action_value\n",
+    "                best_action = action\n",
+    "        return best_action\n",
+    "\n",
+    "    def play_episode(self, env):\n",
+    "        total_reward = 0.0\n",
+    "        state = env.reset()\n",
+    "        while True:\n",
+    "            action = self.select_action(state)\n",
+    "            new_state, reward, is_done, _ = env.step(action)\n",
+    "            self.rewards[(state, action, new_state)] = reward\n",
+    "            self.transits[(state, action)][new_state] += 1\n",
+    "            total_reward += reward\n",
+    "            if is_done:\n",
+    "                break\n",
+    "            state = new_state\n",
+    "        return total_reward\n",
+    "\n",
+    "    def value_iteration(self):\n",
+    "        for state in range(self.env.observation_space.n): # s\n",
+    "            for action in range(self.env.action_space.n): # a\n",
+    "                action_value = 0.0\n",
+    "                target_counts = self.transits[(state, action)] #(s,a)->(s'-> times)\n",
+    "                total = sum(target_counts.values())\n",
+    "                for tgt_state, count in target_counts.items():\n",
+    "                    reward = self.rewards[(state, action, tgt_state)]\n",
+    "                    best_action = self.select_action(tgt_state)\n",
+    "                    action_value += (count / total) * (reward + GAMMA * self.values[(tgt_state, best_action)])\n",
+    "                self.values[(state, action)] = action_value\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    test_env = gym.make(ENV_NAME)\n",
+    "    agent = Agent()\n",
+    "    writer = SummaryWriter(comment=\"-q-iteration\")\n",
+    "\n",
+    "    iter_no = 0\n",
+    "    best_reward = 0.0\n",
+    "    while True:\n",
+    "        iter_no += 1\n",
+    "        agent.play_n_random_steps(100)\n",
+    "        agent.value_iteration()\n",
+    "\n",
+    "        reward = 0.0\n",
+    "        for _ in range(TEST_EPISODES):\n",
+    "            reward += agent.play_episode(test_env)\n",
+    "        reward /= TEST_EPISODES\n",
+    "        writer.add_scalar(\"reward\", reward, iter_no)\n",
+    "        if reward > best_reward:\n",
+    "            print(\"Best reward updated %.3f -> %.3f\" % (best_reward, reward))\n",
+    "            best_reward = reward\n",
+    "        if reward > 0.80:\n",
+    "            print(\"Solved in %d iterations!\" % iter_no)\n",
+    "            break\n",
+    "    writer.close()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1690,6 +2027,41 @@
    "source": [
     "## Deep Q-Networks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
