--- a/RL_hands_on.ipynb
+++ b/RL_hands_on.ipynb
@@ -467,7 +467,6 @@
      "end_time": "2019-07-22T08:51:09.281706Z",
      "start_time": "2019-07-22T08:37:40.085966Z"
     },
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [
@@ -2030,22 +2029,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Common Procedures**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-23T08:46:23.158457Z",
-     "start_time": "2019-07-23T08:46:23.152488Z"
-    },
-    "hidden": true
+     "end_time": "2019-07-23T16:45:43.221479Z",
+     "start_time": "2019-07-23T16:45:43.196663Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -2086,13 +2082,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-23T08:46:23.899270Z",
-     "start_time": "2019-07-23T08:46:23.886135Z"
-    },
-    "hidden": true
+     "end_time": "2019-07-23T16:45:46.921086Z",
+     "start_time": "2019-07-23T16:45:46.532934Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -2344,11 +2339,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-23T09:08:15.874342Z",
-     "start_time": "2019-07-23T08:49:19.288320Z"
+     "start_time": "2019-07-23T16:45:50.687Z"
     }
    },
    "outputs": [
@@ -2371,45 +2365,17 @@
       "    (2): Linear(in_features=512, out_features=6, bias=True)\n",
       "  )\n",
       ")\n",
-      "1097: done 1 games, mean reward -19.000, eps 0.99, speed 858.11 f/s\n",
-      "1986: done 2 games, mean reward -19.500, eps 0.98, speed 766.70 f/s\n",
-      "2827: done 3 games, mean reward -20.000, eps 0.97, speed 839.71 f/s\n",
-      "3722: done 4 games, mean reward -20.000, eps 0.96, speed 828.50 f/s\n",
-      "4651: done 5 games, mean reward -20.200, eps 0.95, speed 792.24 f/s\n",
-      "5487: done 6 games, mean reward -20.167, eps 0.95, speed 781.69 f/s\n",
-      "6418: done 7 games, mean reward -20.143, eps 0.94, speed 747.11 f/s\n",
-      "7320: done 8 games, mean reward -20.125, eps 0.93, speed 727.44 f/s\n",
-      "8220: done 9 games, mean reward -20.111, eps 0.92, speed 725.58 f/s\n",
-      "9130: done 10 games, mean reward -20.200, eps 0.91, speed 702.58 f/s\n",
-      "9982: done 11 games, mean reward -20.273, eps 0.90, speed 664.70 f/s\n",
-      "10976: done 12 games, mean reward -20.250, eps 0.89, speed 16.88 f/s\n",
-      "11738: done 13 games, mean reward -20.308, eps 0.88, speed 15.69 f/s\n",
-      "12709: done 14 games, mean reward -20.357, eps 0.87, speed 15.03 f/s\n",
-      "13748: done 15 games, mean reward -20.333, eps 0.86, speed 14.73 f/s\n",
-      "14733: done 16 games, mean reward -20.312, eps 0.85, speed 14.23 f/s\n",
-      "15662: done 17 games, mean reward -20.294, eps 0.84, speed 13.45 f/s\n",
-      "16474: done 18 games, mean reward -20.333, eps 0.84, speed 13.57 f/s\n",
-      "17314: done 19 games, mean reward -20.316, eps 0.83, speed 13.73 f/s\n",
-      "18304: done 20 games, mean reward -20.350, eps 0.82, speed 13.92 f/s\n",
-      "19262: done 21 games, mean reward -20.381, eps 0.81, speed 14.18 f/s\n",
-      "20086: done 22 games, mean reward -20.409, eps 0.80, speed 12.30 f/s\n",
-      "21097: done 23 games, mean reward -20.435, eps 0.79, speed 11.80 f/s\n",
-      "21921: done 24 games, mean reward -20.458, eps 0.78, speed 11.24 f/s\n",
-      "23064: done 25 games, mean reward -20.400, eps 0.77, speed 12.54 f/s\n",
-      "24038: done 26 games, mean reward -20.346, eps 0.76, speed 13.07 f/s\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-76-79aa41ddba4e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    176\u001b[0m         \u001b[0mbatch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m         \u001b[0mloss_t\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalc_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtgt_net\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 178\u001b[0;31m         \u001b[0mloss_t\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    179\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    180\u001b[0m     \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    105\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         \"\"\"\n\u001b[0;32m--> 107\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     91\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     92\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "979: done 1 games, mean reward -19.000, eps 0.99, speed 384.84 f/s\n",
+      "1956: done 2 games, mean reward -19.000, eps 0.98, speed 445.28 f/s\n",
+      "2806: done 3 games, mean reward -19.667, eps 0.97, speed 421.08 f/s\n",
+      "3769: done 4 games, mean reward -20.000, eps 0.96, speed 451.19 f/s\n",
+      "4869: done 5 games, mean reward -20.000, eps 0.95, speed 454.45 f/s\n",
+      "5631: done 6 games, mean reward -20.167, eps 0.94, speed 430.77 f/s\n",
+      "6393: done 7 games, mean reward -20.286, eps 0.94, speed 461.72 f/s\n",
+      "7185: done 8 games, mean reward -20.375, eps 0.93, speed 392.39 f/s\n",
+      "8225: done 9 games, mean reward -20.333, eps 0.92, speed 410.41 f/s\n",
+      "9027: done 10 games, mean reward -20.400, eps 0.91, speed 344.52 f/s\n",
+      "10023: done 11 games, mean reward -20.364, eps 0.90, speed 155.45 f/s\n"
      ]
     }
    ],
@@ -2434,10 +2400,10 @@
     "\n",
     "GAMMA = 0.99\n",
     "BATCH_SIZE = 32\n",
-    "REPLAY_SIZE = 10000\n",
+    "REPLAY_SIZE = 10000 #10000\n",
     "LEARNING_RATE = 1e-4\n",
-    "SYNC_TARGET_FRAMES = 1000\n",
-    "REPLAY_START_SIZE = 10000\n",
+    "SYNC_TARGET_FRAMES = 1000 #1000\n",
+    "REPLAY_START_SIZE = 10000 #10000\n",
     "\n",
     "EPSILON_DECAY_LAST_FRAME = 10**5\n",
     "EPSILON_START = 1.0\n",
@@ -2599,7 +2565,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### dqn play"
    ]
@@ -2607,7 +2575,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#from lib import wrappers\n",
@@ -2677,7 +2647,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
